<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_light"
    tools:context=".Activity1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/text_stories"
        android:backgroundTintMode="add"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="40sp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingTop="150dp">



        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/the_clever_fish4324" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_two_frogs4"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="25dp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/honesty_d_best_policy"
            android:layout_marginTop="25dp"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_clever_rooster99"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="25dp"/>


        <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_here_for_more_stories"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="105dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>